--- a/README.rdoc
+++ b/README.rdoc
@@ -1,12 +1,13 @@
 ## welcome to {Errupt}[http://infinite-lake-6652.herokuapp.com/].
 
-As developers we often run in to errors, and it's our job to figure out how to fix it. We may spend minute, hours, or even days trying to fix one error, losing some hairs and tempers along the way. THe routine is almost always the same. If we can't immediately pinpoint the solution to an error, we usually try some assumptions, google for the error, or if we're lucky, ask another dev buddy if they have any idea how to fix it.
 
-However, when was the last time you took a few minutes to write down a big error you ran in to, along with how you finally solved, and maybe even take note of which approaches didn't work? What if you or someone else runs i to thwe exact same error a few weeks, months or even years down the line. Will you remember how you fixed it? You may try to look through your code from a previous project trying to figure out how you fixed it, or spend hours trying to find that one google search result which had the answer. It all results in time wasted.
+As developers, we often run in to errors, and it's our job to figure out how to fix it. We may spend minute, hours, or even days trying to fix one error, losing some hairs and tempers along the way. The routine is almost always the same. If we can't pinpoint the solution to an error right away, we usually try some assumptions, google for the error, or if we're lucky, ask another dev buddy if they have any idea how to fix it.
 
-Enter Errupt. 
+However, when was the last time you took a few minutes to write down a big error you ran in to, along with how you finally solved, and maybe even take note of which approaches didn't work? What if a few weeks, months or even years down the line, yourself, a friend or a colleague runs in to the exact same error. Will you remember how you resolved it the first time? It's possible that you may not remember at all. You may have to look through your code from a previous project and try to figure out how you fixed it, or spend hours trying to find that one google search result which had the answer. It all boils down to time wasted.
 
-Errupt allows you to keep a log of errors, along with screenshots and additional details such as the technologies you are using, including the language and framework version numbers. These small details can make a big difference. Perhaps, the way you solve an error in Ruby on Rails 4 is not the same as how you would fix it in Rails 3. Keeping a detailed error log helps you and others developers approach a problem with more knowledge while reducing the chance of having to do the same work twice.
+Enter Errupt.
+
+Errupt allows you to keep a log of errors, along with screenshots and additional details such as the technologies you are using, including the language and framework version numbers. These small details can make a big difference. Perhaps, the way you solve an error in Ruby on Rails 4 is not the same as how you would solve it in Rails 3. Keeping a detailed error log helps you and other developers approach a problem with more knowledge while reducing the chance of having to do the same work twice.
 
 Features:
 
